@@ -1,3 +1,12 @@
+2008-05-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/rgb2ycbcr.c: fix memory leak of raster buffer.
+
+	* tools/tiffcp.c: Simplify inknames code to avoid pointless test.
+	Cleanup scanline allocation to avoid coverity warning.
+
+	* tools/thumbnail.c: Check for TIFFOpen() failure.
+
 2008-05-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirinfo.c: Use TIFF_SETGET_ASCII for PIXAR_TEXTUREFORMAT
